# salsa-lib

./: .gitignore  .hgignore  ChangeLog  Makefile  Makefile.am  README  README.md  alsa.m4  alsa.pc.in  configure.ac  control.c  control.h  ctl_macros.h  ctl_types.h  hcontrol.c  hcontrol.h  hctl_macros.h  hctl_types.h  local.h  mixer.c  mixer.h  mixer_macros.h  mixer_types.h  output.h  pcm.c  pcm.h  pcm_macros.h  pcm_misc.c  pcm_params.c  pcm_priv.h  pcm_types.h
src/: Makefile.am  Versions  asound.h  asoundef.h  asoundlib-head.h  asoundlib.h  async.c  cards.c  common_types.h  conf.h  conf_abi.c  control.c  control.h  ctl_abi.c  ctl_func.h  ctl_macros.h  ctl_types.h  error.h  error_abi.c  global.h  global_abi.c  hcontrol.c  hcontrol.h  hctl_abi.c  hctl_func.h  hctl_macros.h  hctl_types.h  hwdep.c  hwdep.h  hwdep_abi.c  hwdep_func.h  hwdep_macros.h  hwdep_types.h  input.h  input_abi.c  local.h  mixer.c  mixer.h  mixer_abi.c  mixer_func.h  (+31 more)
